@@ -16,32 +16,44 @@ class Http : public SocketBase {
   ~Http();
 
   void set_url(const std::string& url);
-  void set_out(const std::ostream* out);
+  void set_out(std::ostream* out);
   void set_success(Service* service, int type);
   void set_failed(Service* service, int type);
 
   void start();
   void close();
   
-  int code() { return m_code; }
+  int  code() { return m_code; }
   const std::string& status() { return m_status; }
+
+  virtual void read();
+  virtual void write();
+  virtual void except();
 
  private:
 
-  int m_fd;
+  void parse_header();
 
-  int m_port;
-  std::string m_host;
-  std::string m_path;
+  int           m_fd;
+  char*         m_buf;
+  unsigned int  m_bufPos;
+  int           m_bufSize;
+  int           m_bufEnd;
 
-  int m_code;
-  std::string m_status;
+  int           m_port;
+  std::string   m_host;
+  std::string   m_path;
 
-  Service* m_successService;
-  int m_successType;
+  int           m_code;
+  std::string   m_status;
 
-  Service* m_failedService;
-  int m_failedType;
+  std::ostream* m_out;
+
+  Service*      m_successService;
+  int           m_successType;
+
+  Service*      m_failedService;
+  int           m_failedType;
 };
 
 }
