@@ -1,3 +1,9 @@
+2004-08-04    <jaris@ifi.uio.no>
+
+	* bitfield: Clean up bitfield class and opimized .notIn().
+
+	* torrent: Finished http class, testing remains.
+
 2004-08-03  Rakshasa  <jaris@student.matnat.uio.no>
 
 	* torrent: Don't throw on zero length piece messages. Why do they send these?
